adding propertis and id for web page day 4

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
      <h1>Sadem's Challenge for Thrusday April 25 </h1>
      <p>learn about the basic of web development - specifically into css and html </p>
-     <p>for more resources <a href="https://www.google.com">click here</a> </p>
+     <p id="daily-challenges">for more resources <a href="https://www.google.com">click here</a> </p>
 
 </body>
 </html>
