--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<img src="photo.jpeg" alt="put your image here to display">
     
      <h1>Sadem's Challenge for Thrusday April 25 </h1>
      <p>learn about the basic of web development - specifically into css and html </p>
-     <p id="daily-challenges">for more resources <a href="https://www.google.com">click here</a> </p>
+     <p id="daily-challenges">for more resources <a href="full-week.html">click here</a> </p>
 
 </body>
 </html>
