"Add line about diving deeper into html and css for complex websites"
This commit message accurately describes the change made in the code diff. It mentions that a new line has been added, which includes text about exploring more complex topics in

--- a/full-week.html
+++ b/full-week.html
@@ -11,6 +11,7 @@
     <p> Explore for <a href="index.html"> events</a></p>
     <p>solving daily challenges on css and html</p>
     <p>solving exersices and question on html and css</p>
+    <p>Dive deeper into html and css and complex website</p>
     
 </body>
 </html>
